// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile component renders default avatar if signed in 1`] = `
<div
  className="tour-user-profile"
>
  <div>
    <WithStyles(ForwardRef(IconButton))
      aria-label="Open user menu"
      className="button-class"
      onClick={[Function]}
    >
      <Memo(ForwardRef(AccountCircleIcon)) />
    </WithStyles(ForwardRef(IconButton))>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="simple-menu"
      onClose={[Function]}
      open={false}
    >
      <div>
        <WithStyles(ForwardRef(Typography))>
          Signed in as:
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          anonymous
        </WithStyles(ForwardRef(Typography))>
      </div>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(MenuItem))
        id="item-sign-out"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemIcon))>
          <Memo(ForwardRef(ExitToAppIcon)) />
        </WithStyles(ForwardRef(ListItemIcon))>
        <WithStyles(ForwardRef(ListItemText))
          primary="logout-button"
        />
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Menu))>
  </div>
</div>
`;

exports[`User profile component renders sign in button if not signed in 1`] = `
<div
  className="tour-user-profile"
>
  <WithStyles(ForwardRef(Button))
    className="button-class"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`User profile component renders sign in button if user signed in via autoLogin 1`] = `
<div
  className="tour-user-profile"
>
  <WithStyles(ForwardRef(Button))
    className="button-class"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`User profile component renders user avatar if signed in with avatar url 1`] = `
<div
  className="tour-user-profile"
>
  <div>
    <WithStyles(ForwardRef(Avatar))
      alt="user"
      aria-label="Open user menu"
      onClick={[Function]}
      src="test_url"
    />
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="simple-menu"
      onClose={[Function]}
      open={false}
    >
      <div>
        <WithStyles(ForwardRef(Typography))>
          Signed in as:
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          test
        </WithStyles(ForwardRef(Typography))>
      </div>
      <WithStyles(ForwardRef(Divider)) />
      <WithStyles(ForwardRef(MenuItem))
        id="item-sign-out"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemIcon))>
          <Memo(ForwardRef(ExitToAppIcon)) />
        </WithStyles(ForwardRef(ListItemIcon))>
        <WithStyles(ForwardRef(ListItemText))
          primary="logout-button"
        />
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Menu))>
  </div>
</div>
`;
